# pcp_project

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.rst  classification.rst  conf.py  examples.rst  index.rst  usage.rst
examples/: 0-dataset-exploration.ipynb  1-logistic-reg-binary-classifier.ipynb  2-mdm-binary-classifier.ipynb  3-multilabel-classification.ipynb  pipe0_depression_eyesclosed.ipynb  pipe1_disorder_eyesclosed.ipynb  pipe2_OCD_eyesopen.ipynb
pcp_project/: __init__.py  _helpers.py  classify.py  data.py  estimators.py  pipeline.py  plotting.py
tests/: conftest.py  test_classify.py  test_data.py  test_estimators.py  test_pipeline.py  test_plotting.py  test_workflow.py
