[project]
name = "pcp-project"
version = "0.1.0"
description = "Class project for subject-level classification from multi-state EEG recordings."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause" }
authors = [{ name = "PCP EEG Project 2026" }]
keywords = ["eeg", "scikit-learn", "riemannian", "covariance", "classification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "mne>=1.6",
    "matplotlib>=3.8",
    "pyriemann>=0.6",
]

[project.optional-dependencies]
examples = [
    "jupyter>=1.0",
    "seaborn>=0.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pcp_project"]

# ---------------------------------------------------------------------------
# Linting / formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"
# Example notebooks are excluded from lint/format.
extend-exclude = ["examples"]

[tool.ruff.lint]
# Core correctness + imports + bugbear + pyupgrade + docstrings.
select = ["E", "F", "W", "I", "B", "UP", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# Tests and examples do not require the docstring convention.
"tests/*" = ["D", "E501"]
"docs/*" = ["D"]

# ---------------------------------------------------------------------------
# Testing / coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["pcp_project"]

[tool.coverage.report]
show_missing = true
fail_under = 100
